# AIash

./: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig.defaults
.trae/documents/: 修复WebSocket连接失败问题.md
components/task_runner/: CMakeLists.txt  task_runner.c
components/task_runner/include/: task_runner.h
main/: CMakeLists.txt  application.c  application.h  idf_component.yml  main.c  object.h
main/audio/: audio_decoder.c  audio_decoder.h  audio_encoder.c  audio_encoder.h  audio_process.c  audio_process.h  audio_sr.c  audio_sr.h
main/bsp/: bsp_board.c  bsp_board.h  bsp_board_button.c  bsp_board_codec.c  bsp_board_config.h  bsp_board_lcd.c  bsp_board_led.c  bsp_board_wifi.c
main/display/: xiaozhi_display.c  xiaozhi_display.h
main/iot/: light_thing.c  light_thing.h  methods.c  methods.h  mylist.h  properties.c  properties.h  speaker_thing.c  speaker_thing.h  things.c  things.h
main/protocol/: ota.c  ota.h  protocol.c  protocol.h
