idf_component_register(SRCS "main.c"
                       "bsp/bsp_board.c"
                       "bsp/bsp_board_led.c"
                       "bsp/bsp_board_button.c"
                       "bsp/bsp_board_wifi.c"
                       "bsp/bsp_board_codec.c"
                    INCLUDE_DIRS ".")