idf_component_register(SRCS "application.c" "main.c"
                       "bsp/bsp_board.c"
                       "bsp/bsp_board_led.c"
                       "bsp/bsp_board_button.c"
                       "bsp/bsp_board_wifi.c"
                       "bsp/bsp_board_codec.c"
                       "bsp/bsp_board_lcd.c"
                       "audio/audio_encoder.c"
                       "audio/audio_decoder.c"
                       "audio/audio_sr.c"
                       "audio/audio_process.c"
                       "protocol/ota.c"
                       "protocol/protocol.c"
                       "display/xiaozhi_display.c"
                       "iot/methods.c"
                       "iot/properties.c"
                       "iot/things.c"
                       "iot/speaker_thing.c"
                       "iot/light_thing.c"
                    INCLUDE_DIRS ".")